# another_gateway

./: .env.example  .gitignore  Cargo.toml  README.md  api.env  gateway.env
api/: Cargo.toml
api/src/: main.rs
api/src/config/: db.rs  mod.rs
api/src/repository/: application_repository.rs
api/src/rest/: application_controller.rs
api/src/service/: application_service.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/model/: application.rs  mod.rs
db/: der.mwb  der.mwb.bak
db/changelog/: db.changelog-dev.xml  initial_script.sql  liquibase.properties
db/changelog/migrations/: v0001_schema_creation.sql  v0002_tables_application.sql
docker/: docker-compose.yaml
gateway/: Cargo.toml
gateway/src/: main.rs
gateway/src/config/: db.rs
gateway/src/model/: pagination.rs
gateway/src/repository/: application_repository.rs
gateway/src/service/: application_service.rs  application_service_test.rs  forward_service.rs
self_signed_certs/: another_gateway_cert.pem  another_gateway_key.pem
src/: main.rs
src/config/: db.rs  http_client.rs  mod.rs  rustls.rs
src/exception/: api_error.rs  api_error_code.rs  mod.rs
src/model/: application.rs  mod.rs  pagination.rs
src/model/custom_type/: mod.rs  string_min_size_3.rs
src/repository/: application_repository.rs  mod.rs
src/rest/: application_controller.rs  forward_controller.rs  mod.rs
src/service/: application_service.rs  forward_service.rs  mod.rs
