[package]
name = "another_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
hyper = { version = "0.14.14", features = ["full"] }
mockall = "0.11.3"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres", "chrono"] }
tokio = { version = "1.22.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
