[workspace]
members = [
    "common",
    "api",
    "gateway"
]

[workspace.package]
edition = "2021"
authors = ["Johny Marques <johnymbr@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
axum = "0.6.1"
axum-macros = "0.3.0"
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.17"
dotenvy = "0.15.7"
hyper = { version = "0.14.14", features = ["full"] }
hyper-tls = "0.5.0"
mockall = "0.11.3"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres", "chrono"] }
tokio = { version = "1.22.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2.2"
opentelemetry = {version="0.18.0", default-features=false, features=["trace", "rt-tokio"]}
tracing-opentelemetry = "0.18.0"
opentelemetry-otlp = {version="0.11.0", features=["reqwest-client", "reqwest-rustls", "http-proto", "tls"]}
tonic = {version="0.8.3", features=["tls", "tls-roots"]}