[package]
name = "ag_api"
version = "0.1.0"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-macros = { workspace = true }
axum-server = { workspace = true }
chrono = { workspace = true }
common = { path = "../common" }
derive_more = { workspace = true }
dotenv = { workspace = true }
hyper = { workspace = true }
hyper-tls = { workspace = true }
mockall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }